# torus

./: .gitignore  Cargo.toml  README.md
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/physics_test/: Cargo.toml
apps/physics_test/src/: main.rs
apps/player_test/: Cargo.toml
apps/player_test/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: app.rs  main.rs  net.rs
apps/server/src/resources/: lobby.rs  mod.rs  net_map.rs
apps/server/src/systems/: connections_handler.rs  event_handler.rs  lobby_manager.rs  mod.rs  physics_broadcast.rs  request_handler.rs  spawn_handler.rs
apps/space-3d/: Cargo.toml
apps/space-3d/src/: main.rs
assets/maps/: test_map.ron
assets/test/items/: bananna.ron
assets/world/anthro/: factions.ron  rifles.ron
assets/world/natural/fluids/: water.ron
libraries/common/: Cargo.toml
libraries/common/src/: lib.rs
libraries/common/src/components/: agent.rs  biped.rs  controller.rs  mod.rs  player.rs
libraries/common/src/items/: bundles.rs  items.rs  mod.rs  plugin.rs
libraries/common/src/maths/: mod.rs
libraries/common/src/meta/: factions.rs  weapon.rs
libraries/common/src/physics/: mod.rs  plugin.rs
libraries/common/src/physics/systems/: drag.rs  mod.rs
libraries/common/src/player/: bundles.rs  mod.rs  plugin.rs
libraries/common/src/player/components/: agent.rs  biped.rs  controller.rs  mod.rs
libraries/common/src/player/systems/: mod.rs  movement.rs
libraries/common/src/units/: mod.rs
libraries/core/: Cargo.toml
libraries/core/src/: lib.rs
libraries/core/src/bundles/: player.rs
libraries/core/src/entities/: mod.rs  spawn.rs
libraries/core/src/resources/: entity_type.rs  mod.rs  spawn_job.rs  spawn_pool.rs  spawn_status.rs
libraries/enviroment/: Cargo.toml
libraries/enviroment/src/: lib.rs
libraries/enviroment/src/builders/: mod.rs
libraries/enviroment/src/mesh/: edge.rs  face.rs  map_mesh.rs  mesh.rs  mod.rs  vertex.rs
libraries/enviroment/src/navigation/: junction.rs  mod.rs  nav_map.rs  path.rs  portal.rs  region.rs
libraries/meta/: Cargo.toml
libraries/meta/src/: factions.rs  items.rs  lib.rs  lists.rs
libraries/network/: Cargo.toml
libraries/network/src/: lib.rs  resources.rs
libraries/network/src/packets/: input.rs  mod.rs  physics.rs  request.rs
libraries/physics/: Cargo.toml
libraries/physics/src/: lib.rs  plugin.rs
libraries/physics/src/components/: drag.rs
libraries/physics/src/systems/: drag.rs  mod.rs  movement.rs
tests/net_test/: Cargo.toml
tests/net_test/src/: main.rs
tests/physics_test/: Cargo.toml
tests/physics_test/src/: main.rs
tests/player_test/src/: main.rs
tools/uuid/: Cargo.toml
tools/uuid/src/: main.rs
wiki/: core-mechanics.md  game-design.md  project-structure.md
