[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7" }
bevy_renet = "0.0.2"
serde = { version = "1.0" }
torus_common = { path  = "../../libraries/common" }
torus_network = { path  = "../../libraries/network" }