[package]
name = "player_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7" }
bevy-inspector-egui = { version = "0.10" }
leafwing-input-manager = { version = "0.3.0" }
torus_common = { path  = "../../libraries/common" }
fishics = { path = "C:/Users/Fishy/Documents/Projects/Libraries/geometry/fishics" }
prima = { path = "C:/Users/Fishy/Documents/Projects/Libraries/geometry/prima" }