[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_renet = "0.0.2"
serde = { version = "1.0" }
bimap = { version = "0.6.2", features = ["serde"] }
prima = { path = "C:/Users/Fishy/Documents/Projects/Libraries/geometry/prima" }
fishics = { path = "C:/Users/Fishy/Documents/Projects/Libraries/geometry/fishics" }
torus_common = { path  = "../../libraries/common" }
torus_network = { path  = "../../libraries/network" }
torus_physics = { path  = "../../libraries/physics" }
torus_core = { path  = "../../libraries/core" }