[package]
name = "torus_environment"
version = "0.1.0"
authors = ["Caspar Green <caspar.m.green@gmail.com>"]
edition = "2021"

[dependencies]
prima = { path = "C:/Users/Fishy/Documents/Projects/Libraries/geometry/prima" }
slotmap = { version = "1.0", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
ron = "0.7"
serde = "1.0"
image = "0.24.1"