[package]
name = "torus_uuid_generator"
version = "0.1.0"
authors = ["Caspar Green <caspar.m.green@gmail.com>"]
edition = "2021"

[dependencies]
ron = "0.7"
serde = "1.0"
bevy = { version = "0.7", default-features = false }
bevy-inspector-egui = { version = "0.10" }
uuid = { version = "1.0.0", features = ["v4"] }